--- a/FRONTEND/angular.json
+++ b/FRONTEND/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "FRONTEND"
+    }
+  },
+  "defaultProject": "FRONTEND",
+  "cli": {
+    "analytics": "b350538c-aac9-4aea-9c74-a56b15ca89da"
+  }
 }
